

DescTools 0.99.62 (2026-03-21)
------------------------------

NEW FUNCTIONS ADDED:
  * The golden ratio has been added as constant "phi".



DescTools 0.99.61 (2025-12-21)
------------------------------

NEW FUNCTIONS ADDED:
  * FmCI() returns formatted confidence intervals.
  * Fm() is a redesigned function for formatting numbers and dates. 
    It's gonna replace Format() someday in the future.
  * Style() is used to define format templates, Styles() returns already 
    defined styles.  
  * StringsAsFactors() helps to define characters as factors in data.frames.
  * GlassDelta() calculates another commonly used effectsize measure.
  * ToBaseR() helps to go back to the roots and converts tibbles to data.frames.
  * RaterFrame() helps to build a wide data.frame of multiple raters based 
    on a formula.
  * IsConfusionTable() checks if a matrix looks like a coincidence matrix.
  * PlotCIBand() is helpful for a lines plot containing confidence bands.
  * NAVal() replaces NAs by a specified value, similar to the NVL() 
    function in SQL (using the logic of BlankIfNA()). 
  * Split() has been introduced to allow better implementation of 
    the formula interface.  
  

UPDATED FUNCTIONS:
  * XLView() uses write_xlsx instead write.table allowing better support
    for non ASCII characters.
  * CutAge() gains a new argument full, allowing to remove empty
    levels at the edges of the distribution. 
    The arguments have also been changed: "from", "to", "by" have 
    been replaced by "breaks". A new argument "labels" allow to define 
    better suited labels for age specific levels.
  * LeveneTest() has been given the same interface as similar functions in 
    base R (as ansari.test or kruskal.test). lm-interface has been defunct.
  * Format() looses the two predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%". These turned out to not be flexible enough.