@@ -1,28 +1,26 @@
 \name{Recode}
 \alias{Recode}
-%- Also NEED an '\alias' for EACH other topic documented here.
 \title{Recode a Factor
-%%  ~~function to do ... ~~
 }
 \description{Combining or rearranging a factor can be tedious if it has many 
 vels. \code{Recode} supports this step by
 accepting a direct definition of new levels by enumerating old levelnames 
 as argument and adding an \code{"elselevel"} option. If new levels are given as 
 integer values they will be translated in the according levels.
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
 }
 \usage{
 Recode(x, ..., keep = NULL, elselevel = NA, ref = NULL, 
        use.empty = FALSE, num = FALSE)
 }
-%- maybe also 'usage' for other objects documented here.
 \arguments{
-  \item{x}{the factor whose levels are to be altered. If x is \code{character} it will be factorized (using \code{factor} defaults).
-%%     ~~Describe \code{x} here~~
+  \item{x}{the factor whose levels are to be altered. 
+  If x is \code{character} it will be factorized (using \code{factor} defaults) 
+  but returned as  \code{character} again.
 }
-  \item{\dots}{the old levels (combined by \code{c}() if there are several) named with the new level:\cr
-  \code{newlevel_a=c("old_a", "old_b"), }\cr\code{newlevel_b=c("old_c", "old_d")}\cr See examples.
-%%     ~~Describe \code{newlevels} here~~
+  \item{\dots}{the old levels (combined by \code{c}() if there are several) 
+  named with the new level:\cr
+  \code{newlevel_a = c("old_a", "old_b"), }\cr\code{newlevel_b = c("old_c", "old_d")}\cr 
+  See examples.
 }
 
 \item{keep}{vector of levels that should be left untouched.}
@@ -34,24 +32,23 @@ Recode(x, ..., keep = NULL, elselevel = NA, ref = NULL,
 
   \item{ref}{the reference level, typically a string.}
 
-  \item{use.empty}{logical. Defines how a new level, which can't be found in x, should be handled.  Should it be left in the level's list or be dropped? The default is \code{FALSE},
+  \item{use.empty}{logical. Defines how a new level, which can't be found in x, 
+  should be handled.  Should it be left in the level's list or be dropped? 
+  The default is \code{FALSE},
    which drops empty levels.
-%%     ~~Describe \code{newlevels} here~~
 }
 \item{num}{logical. If set to \code{TRUE} the result will be numeric.}
 }
 \value{
-the factor having the new levels applied.
+the factor having the new levels applied.\cr
+if \code{x} was a  \code{character} vector, the result will also be \code{character}
 }
 
 \author{Andri Signorell <andri@signorell.net>
 }
 
-%% ~Make other sections like Warning with \section{Warning }{....} ~
-
 \seealso{\code{\link{factor}}, \code{\link{levels}}, \code{\link{relevel}}, \code{\link{reorder}}\cr
 There's another solution for this problem in the package \bold{car}.
-%% ~~objects to See Also as \code{\link{help}}, ~~~
 }
 \examples{
 set.seed(1984)
@@ -75,7 +72,7 @@ data.frame(
                     "new_1"   = c("old_4","old_8", NA),
                     elselevel = "other"),
        
-  # NAs remain untouched       
+  # NAs remain unaffected, unless specified to be processed      
   NoRecodeNA = Recode(x,
                       "new_1"   = c("old_4","old_8"),
                       elselevel = "other")
@@ -84,11 +81,10 @@ data.frame(
 # keep some levels, collapse others and reset the reference level
 ff <- factor(c("apple","pear","banana","kiwi",
                "mango","peach","grape","plum"))
-
 Recode(ff, 
-        stone=c("peach", "plum"), 
-        keep=c("apple","banana"),
-        elselevel = "other", ref="stone")
+       stone=c("peach", "plum"), 
+       keep=c("apple","banana"),
+       elselevel = "other", ref="stone")
 
 
 x <- factor(letters[1:6])
@@ -118,6 +114,4 @@ Recode(likert, det=1:6, pas=7:8, pro=9:10)
 Recode(likert, "1"=1:6, "2"=7:8, "5"=9:10, num=TRUE)
 
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
 \keyword{ manip }
