@@ -1,2 +1,3 @@
 *.o
 *.dll
+DescTools.dll
