@@ -77,6 +77,7 @@ extern SEXP _DescTools_isLeapYearInt(SEXP);
 extern SEXP _DescTools_ConDisPairs(SEXP);
 extern SEXP _DescTools_ConDisPairsXY(SEXP, SEXP);
 extern SEXP _DescTools_formatNum(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
+extern SEXP _DescTools_formatDateTime(SEXP, SEXP, SEXP, SEXP);
 
 
 /* .Fortran calls */
@@ -140,6 +141,7 @@ static const R_CallMethodDef CallEntries[] = {
   {"_DescTools_ConDisPairs",   (DL_FUNC) &_DescTools_ConDisPairs,   1},
   {"_DescTools_ConDisPairsXY", (DL_FUNC) &_DescTools_ConDisPairsXY, 2},
   {"_DescTools_formatNum",     (DL_FUNC) &_DescTools_formatNum,     7},
+  {"_DescTools_formatDateTime",(DL_FUNC) &_DescTools_formatDateTime,4},
   {NULL, NULL, 0}
 };
 
