@@ -5,6 +5,7 @@ DescTools 0.99.62 (2026-03-21)
 
 NEW FUNCTIONS ADDED:
   * The golden ratio has been added as constant "phi".
+  * Fm() gets an extended datetime format option.
 
 
 
